capture: add progress view when requesting the api

--- a/PhotoStream/Base.lproj/Main.storyboard
+++ b/PhotoStream/Base.lproj/Main.storyboard
@@ -155,6 +155,37 @@ Enjoy your experience!</string>
             </objects>
             <point key="canvasLocation" x="1119.8473282442749" y="-372.53521126760563"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="YL9-eM-6xc">
+            <objects>
+                <viewController storyboardIdentifier="SyncingViewControllerID" keyboardType="off" id="WCr-gf-spE" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tLI-lC-aRD">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="O0P-TX-fmA">
+                                <rect key="frame" x="170" y="225" width="53" height="45"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Syncing..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hp5-hx-sYQ">
+                                <rect key="frame" x="119" y="176" width="155" height="41"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="eMQ-eo-xBi"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pnm-Sy-RKT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1907.6335877862596" y="-385.21126760563385"/>
+        </scene>
         <!--Details View Controller-->
         <scene sceneID="zQC-0b-OvC">
             <objects>
